--- a/conference-control/src/main/resources/application.properties
+++ b/conference-control/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=conference-control
 server.port=11002
 
+#server.ssl.enabled=false
+
 spring.datasource.url=jdbc:postgresql://localhost:11234/conference_platform_db
 spring.datasource.username=c_control_user
 spring.datasource.password=c_control_user
@@ -16,3 +18,10 @@ spring.liquibase.default-schema=c_control
 
 logging.level.liquibase=DEBUG
 logging.level.org.springframework.boot.autoconfigure.liquibase=DEBUG
+
+conference.room.rest.client.root-uri=http://localhost:11001/
+conference.room.rest.client.connect-timeout=5s
+conference.room.rest.client.read-timeout=5s
+conference.room.rest.client.paths.findone=/v1/rooms/{roomCode}
+#conference.room.rest.client.paths.findall=/v1/rooms
+
