--- a/back-office-gateway/build.gradle
+++ b/back-office-gateway/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'idea'
 	id 'org.springframework.boot' version '3.5.3'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'com.diffplug.spotless' version '7.0.4'
 }
 
 group = 'com.conference.platform'
@@ -20,6 +21,14 @@ repositories {
 
 ext {
 	set('springCloudVersion', "2025.0.0")
+}
+
+spotless {
+	java {
+		trimTrailingWhitespace()
+		endWithNewline()
+		removeUnusedImports()
+	}
 }
 
 dependencies {
