--- a/back-office-gateway/src/main/resources/application.properties
+++ b/back-office-gateway/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.cloud.gateway.server.webflux.routes[1].uri=http://localhost:11002
 spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/v1/conferences/**
 
 
+spring.cloud.gateway.server.webflux.routes[2].id=conference-feedback
+spring.cloud.gateway.server.webflux.routes[2].uri=http://localhost:11003
+spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/v1/conference-feedback/**
+
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
 logging.level.org.springframework.cloud.gateway.handler.FilteringWebHandler=DEBUG
