--- a/conference-feedback/build.gradle
+++ b/conference-feedback/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'idea'
 	id 'org.springframework.boot' version '3.5.3'
 	id 'io.spring.dependency-management' version '1.1.7'
-//	id 'org.liquibase.gradle' version '3.0.2'
+	id 'com.diffplug.spotless' version '7.0.4'
 }
 
 group = 'com.conference.platform'
@@ -23,18 +23,25 @@ ext {
 	lombokVersion = '1.18.38'
 }
 
+spotless {
+	java {
+		trimTrailingWhitespace()
+		endWithNewline()
+		removeUnusedImports()
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	implementation 'org.liquibase:liquibase-core'
-
 	implementation 'de.huxhorn.sulky:de.huxhorn.sulky.ulid:8.2.0'
-
 
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
 
 	compileOnly "org.projectlombok:lombok:$lombokVersion"
 	annotationProcessor "org.projectlombok:lombok:$lombokVersion"
