feat(): add fixes for control and room service (patch doesn't work with gateway)

--- a/conference-control/src/main/resources/application.properties
+++ b/conference-control/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=conference-control
 server.port=11002
 
-#server.ssl.enabled=false
-
 spring.datasource.url=jdbc:postgresql://localhost:11234/conference_platform_db
 spring.datasource.username=c_control_user
 spring.datasource.password=c_control_user
@@ -22,6 +20,4 @@ logging.level.org.springframework.boot.autoconfigure.liquibase=DEBUG
 conference.room.rest.client.root-uri=http://localhost:11001/
 conference.room.rest.client.connect-timeout=5s
 conference.room.rest.client.read-timeout=5s
-conference.room.rest.client.paths.findone=/v1/rooms/{roomCode}
-#conference.room.rest.client.paths.findall=/v1/rooms
-
+conference.room.rest.client.paths.room.find=/v1/rooms/{roomCode}
