--- a/conference-room/src/main/resources/application.properties
+++ b/conference-room/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=conference-room
+spring.application.name=conference-roomViewModel
 server.port=11001
 
 spring.datasource.url=jdbc:postgresql://localhost:11234/conference_platform_db
