--- a/back-office-ui/src/main/resources/application.properties
+++ b/back-office-ui/src/main/resources/application.properties
@@ -9,3 +9,6 @@ backoffice.gateway.rest.client.connect-timeout=5s
 backoffice.gateway.rest.client.read-timeout=5s
 backoffice.gateway.rest.client.paths.room.find=/v1/rooms/{roomCode}
 backoffice.gateway.rest.client.paths.room.new=/v1/rooms
+
+backoffice.gateway.rest.client.paths.conference.one=/v1/conferences/{conferenceCode}
+backoffice.gateway.rest.client.paths.conference.new=/v1/conferences
