--- a/conference-feedback/src/main/resources/application.properties
+++ b/conference-feedback/src/main/resources/application.properties
@@ -7,15 +7,15 @@ spring.datasource.password=c_feedback_user
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
 spring.liquibase.default-schema=c_feedback
 
-logging.level.liquibase=DEBUG
-logging.level.org.springframework.boot.autoconfigure.liquibase=DEBUG
+#logging.level.liquibase=DEBUG
+#logging.level.org.springframework.boot.autoconfigure.liquibase=DEBUG
 
 conference.control.rest.client.root-uri=http://localhost:11002/
 conference.control.rest.client.connect-timeout=5s
