feat(): add functionality and fixes

--- a/conference-control/src/main/resources/application-docker.properties
+++ b/conference-control/src/main/resources/application-docker.properties
@@ -1,14 +1,12 @@
 spring.application.name=conference-control
 server.port=11002
 
-spring.datasource.url=jdbc:postgresql://localhost:11234/conference_platform_db
+spring.datasource.url=jdbc:postgresql://db:11234/conference_platform_db
 spring.datasource.username=c_control_user
 spring.datasource.password=c_control_user
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -18,10 +16,7 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
 spring.liquibase.default-schema=c_control
 
-#logging.level.liquibase=DEBUG
-#logging.level.org.springframework.boot.autoconfigure.liquibase=DEBUG
-
-conference.room.rest.client.root-uri=http://localhost:11001/
+conference.room.rest.client.root-uri=http://conference-room:11001/
 conference.room.rest.client.connect-timeout=20s
 conference.room.rest.client.read-timeout=20s
 conference.room.rest.client.paths.room.find=/v1/rooms/{roomCode}
