--- a/conference-feedback/src/main/resources/application-docker.properties
+++ b/conference-feedback/src/main/resources/application-docker.properties
@@ -1,7 +1,7 @@
 spring.application.name=conference-feedback
 server.port=11003
 
-spring.datasource.url=jdbc:postgresql://localhost:11234/conference_platform_db
+spring.datasource.url=jdbc:postgresql://db:11234/conference_platform_db
 spring.datasource.username=c_feedback_user
 spring.datasource.password=c_feedback_user
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -17,7 +17,7 @@ spring.liquibase.default-schema=c_feedback
 #logging.level.liquibase=DEBUG
 #logging.level.org.springframework.boot.autoconfigure.liquibase=DEBUG
 
-conference.control.rest.client.root-uri=http://localhost:11002/
+conference.control.rest.client.root-uri=http://conference-control:11002/
 conference.control.rest.client.connect-timeout=20s
 conference.control.rest.client.read-timeout=20s
 conference.control.rest.client.paths.participant.find=/v1/conferences/participants/{registrationCode}
