--- a/conference-gateway/build.gradle
+++ b/conference-gateway/build.gradle
@@ -3,10 +3,11 @@ plugins {
 	id 'idea'
 	id 'org.springframework.boot' version '3.5.3'
 	id 'io.spring.dependency-management' version '1.1.7'
+
 }
 
 group = 'com.conference.platform'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 
 java {
 	toolchain {
