feat(): implement UI services functionality

--- a/back-office-ui/src/main/resources/application.properties
+++ b/back-office-ui/src/main/resources/application.properties
@@ -2,13 +2,16 @@ spring.application.name=back-office-ui
 server.port=8888
 
 spring.thymeleaf.cache=false
-logging.level.root=DEBUG
+#logging.level.root=DEBUG
 
 backoffice.gateway.rest.client.root-uri=http://localhost:12001
-backoffice.gateway.rest.client.connect-timeout=5s
-backoffice.gateway.rest.client.read-timeout=5s
+backoffice.gateway.rest.client.connect-timeout=20s
+backoffice.gateway.rest.client.read-timeout=20s
 backoffice.gateway.rest.client.paths.room.find=/v1/rooms/{roomCode}
 backoffice.gateway.rest.client.paths.room.new=/v1/rooms
 
+backoffice.gateway.rest.client.paths.conference.cancel=/v1/conferences/{conferenceCode}/cancel
 backoffice.gateway.rest.client.paths.conference.one=/v1/conferences/{conferenceCode}
 backoffice.gateway.rest.client.paths.conference.new=/v1/conferences
+
+backoffice.gateway.rest.client.paths.conference.feedback=/v1/conference-feedback/conferences/{conferenceCode}/feedback
