--- a/back-office-ui/build.gradle
+++ b/back-office-ui/build.gradle
@@ -4,10 +4,11 @@ plugins {
 	id 'org.springframework.boot' version '3.5.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'com.diffplug.spotless' version '7.0.4'
+
 }
 
 group = 'com.conference.platform'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 
 java {
 	toolchain {
