--- a/external-ui/src/main/resources/application.properties
+++ b/external-ui/src/main/resources/application.properties
@@ -5,9 +5,11 @@ spring.thymeleaf.cache=false
 logging.level.root=DEBUG
 
 conference.gateway.rest.client.root-uri=http://localhost:12002
-conference.gateway.rest.client.connect-timeout=5s
-conference.gateway.rest.client.read-timeout=5s
-conference.gateway.rest.client.paths.room.find=/v1/rooms/{roomCode}
-conference.gateway.rest.client.paths.room.new=/v1/rooms
+conference.gateway.rest.client.connect-timeout=20s
+conference.gateway.rest.client.read-timeout=20s
 
+conference.gateway.rest.client.paths.conference.one=/v1/conferences/{conferenceCode}
 conference.gateway.rest.client.paths.conference.search=/v1/conferences/search?startTime={startTime}&endTime={endTime}
+conference.gateway.rest.client.paths.conference.participant=/v1/conferences/{conferenceCode}/participant
+conference.gateway.rest.client.paths.conference.participant.cancel=/v1/conferences/participants/{registrationCode}/cancel
+conference.gateway.rest.client.paths.conference-feedback.by-registration.leave=/v1/conference-feedback/participants/{registrationCode}/new-feedback
