feat(): add improvements

--- a/conference-gateway/src/main/resources/application-docker.properties
+++ b/conference-gateway/src/main/resources/application-docker.properties
@@ -3,16 +3,15 @@ server.port=12002
 
 # routes
 spring.cloud.gateway.server.webflux.routes[0].id=conference-control
-spring.cloud.gateway.server.webflux.routes[0].uri=http://localhost:11002
+spring.cloud.gateway.server.webflux.routes[0].uri=http://conference-control:11002
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/v1/conferences/**
 spring.cloud.gateway.server.webflux.routes[0].filters[0]=RewritePath=/v1/(?<r>.*), /external/v1/${r}
 
 spring.cloud.gateway.server.webflux.routes[1].id=conference-feedback
-spring.cloud.gateway.server.webflux.routes[1].uri=http://localhost:11003
+spring.cloud.gateway.server.webflux.routes[1].uri=http://conference-feedback:11003
 spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/v1/conference-feedback/**
 spring.cloud.gateway.server.webflux.routes[1].filters[0]=RewritePath=/v1/(?<r>.*), /external/v1/${r}
 
-#
 #logging.level.org.springframework.cloud.gateway=DEBUG
 #logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
 #logging.level.org.springframework.cloud.gateway.handler.FilteringWebHandler=DEBUG
