feat(): add room update validation

--- a/conference-room/src/main/resources/application-docker.properties
+++ b/conference-room/src/main/resources/application-docker.properties
@@ -10,3 +10,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
 spring.liquibase.default-schema=c_room
+
+conference.control.rest.client.root-uri=http://conference-control:11002/
+conference.control.rest.client.connect-timeout=20s
+conference.control.rest.client.read-timeout=20s
+conference.control.rest.client.paths.conferences.rooms.availability=/v1/conferences/rooms/{roomCode}/reservation
+conference.control.rest.client.paths.conferences.rooms.new-capacity=/v1/conferences/rooms/{roomCode}/new-capacity
