--- a/conference-room/src/main/resources/application.properties
+++ b/conference-room/src/main/resources/application.properties
@@ -14,5 +14,8 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
 spring.liquibase.default-schema=c_room
 
-#logging.level.liquibase=DEBUG
-#logging.level.org.springframework.boot.autoconfigure.liquibase=DEBUG
+conference.control.rest.client.root-uri=http://localhost:11002/
+conference.control.rest.client.connect-timeout=20s
+conference.control.rest.client.read-timeout=20s
+conference.control.rest.client.paths.conferences.rooms.availability=/v1/conferences/rooms/{roomCode}/reservation
+conference.control.rest.client.paths.conferences.rooms.new-capacity=/v1/conferences/rooms/{roomCode}/new-capacity
