feat(): add exception handler for conference-control service

--- a/conference-room/build.gradle
+++ b/conference-room/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.liquibase:liquibase-core'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     implementation 'de.huxhorn.sulky:de.huxhorn.sulky.ulid:8.2.0'
 
