--- a/conference-room/src/main/resources/application-docker.properties
+++ b/conference-room/src/main/resources/application-docker.properties
@@ -14,5 +14,5 @@ spring.liquibase.default-schema=c_room
 conference.control.rest.client.root-uri=http://conference-control:11002/
 conference.control.rest.client.connect-timeout=20s
 conference.control.rest.client.read-timeout=20s
-conference.control.rest.client.paths.conferences.rooms.availability=/v1/conferences/rooms/{roomCode}/reservation
-conference.control.rest.client.paths.conferences.rooms.new-capacity=/v1/conferences/rooms/{roomCode}/new-capacity
+conference.control.rest.client.paths.conferences.rooms.reservation=/v1/conferences/rooms/{roomCode}/reservation-check
+conference.control.rest.client.paths.conferences.rooms.new-capacity=/v1/conferences/rooms/{roomCode}/new-capacity-check?newCapacity={newCapacity}
