feat(): improve test coverage

--- a/conference-control/build.gradle
+++ b/conference-control/build.gradle
@@ -37,17 +37,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.liquibase:liquibase-core'
 
-	implementation 'de.huxhorn.sulky:de.huxhorn.sulky.ulid:8.2.0'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'de.huxhorn.sulky:de.huxhorn.sulky.ulid:8.2.0' // ULID code generation
+	runtimeOnly 'org.postgresql:postgresql'
 
-
-    runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'org.testcontainers:postgresql'
 
-
+	// lombok
 	compileOnly "org.projectlombok:lombok:$lombokVersion"
 	annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 	testCompileOnly "org.projectlombok:lombok:$lombokVersion"
